# eb90-rs

./: Cargo.toml  README.md  renovate.json
.github/workflows/: rust.yml
src/: codec.rs  crc.rs  lib.rs  parser.rs
