[package]
name = "eb90"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7"
crc = "2"
tokio-util = { version = "0.7", features = ["codec"], optional = true }
bytes = { version = "1.4.0", optional = true }

[dev-dependencies]
proptest = "1"

[features]
default = ["alloc", "codec"]
alloc = []
codec = ["alloc", "dep:tokio-util", "dep:bytes"]
